feat(reminders): implemented cron job for daily follow-up checks and WhatsApp notifications via Twilio

--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
-    "nodemon": "^3.1.10"
+    "node-cron": "^4.2.0",
+    "nodemon": "^3.1.10",
+    "twilio": "^5.7.2"
   }
 }
